--- a/vite-project/src/index.css
+++ b/vite-project/src/index.css
@@ -1,1 +1,11 @@
 @import "tailwindcss";
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer utilities {
+  .h-custom {
+    height: calc(100dvh - 60px);
+  }
+}
